# kokoro-mlx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/kokoro_mlx/: __init__.py  config.py  generate.py  istftnet.py  kokoro.py  model.py  modules.py  phonemize.py  playback.py  voices.py
tests/: __init__.py  test_config.py  test_generate.py  test_kokoro.py  test_model.py  test_phonemize.py  test_voices.py
